src-tauri/monarch-gui/build_errors.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/chris/Downloads/monarch-store/src-tauri/monarch-gui/Cargo.toml
workspace: /home/chris/Downloads/monarch-store/src-tauri/Cargo.toml
    Checking monarch-store v0.4.0-alpha.1 (/home/chris/Downloads/monarch-store/src-tauri/monarch-gui)
warning: unused import: `flathub_api`
 --> monarch-gui/src/commands/search.rs:2:27
  |
2 | ...i, flathub_api, me...
  |       ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> monarch-gui/src/commands/search.rs:59:9
   |
59 | ...or mut pkg in aur...
   |       ----^^^
   |       |
   |       help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0063]: missing field `installed` in initializer of `models::Package`
   --> monarch-gui/src/commands/search.rs:145:23
    |
145 | ... = models::Package {
    |       ^^^^^^^^^^^^^^^ missing `installed`

error[E0063]: missing field `installed` in initializer of `models::Package`
   --> monarch-gui/src/commands/search.rs:693:23
    |
693 | ... = models::Package {
    |       ^^^^^^^^^^^^^^^ missing `installed`

error[E0063]: missing field `installed` in initializer of `models::Package`
  --> monarch-gui/src/pkgstats_api.rs:31:18
   |
31 | ...p| models::Package {
   |       ^^^^^^^^^^^^^^^ missing `installed`

error[E0277]: the trait bound `Package: Default` is not satisfied
  --> monarch-gui/src/alpm_read.rs:37:23
   |
37 | ... ..Default::default()
   |       ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `std::default::Default` is not implemented for `models::Package`
  --> monarch-gui/src/models.rs:36:1
   |
36 | pub struct Package {
   | ^^^^^^^^^^^^^^^^^^
   = note: the full name for the type has been written to '/home/chris/Downloads/monarch-store/src-tauri/target/debug/deps/monarch_store_lib-2609065e0d032fb5.long-type-5516735778242670180.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `Package: Default` is not satisfied
  --> monarch-gui/src/alpm_read.rs:59:23
   |
59 | ... ..Default::default()
   |       ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `std::default::Default` is not implemented for `models::Package`
  --> monarch-gui/src/models.rs:36:1
   |
36 | pub struct Package {
   | ^^^^^^^^^^^^^^^^^^
   = note: the full name for the type has been written to '/home/chris/Downloads/monarch-store/src-tauri/target/debug/deps/monarch_store_lib-2609065e0d032fb5.long-type-5516735778242670180.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0063]: missing field `installed` in initializer of `models::Package`
  --> monarch-gui/src/aur_api.rs:87:5
   |
87 |     Package {
   |     ^^^^^^^ missing `installed`

error[E0063]: missing field `installed` in initializer of `models::Package`
   --> monarch-gui/src/repo_db.rs:293:14
    |
293 |         Some(Package {
    |              ^^^^^^^ missing `installed`

warning: variable `missing_key` is assigned to, but never used
   --> monarch-gui/src/commands/package.rs:450:9
    |
450 | ...et mut missing_key = ...
    |       ^^^^^^^^^^^^^^^
    |
    = note: consider using `_missing_key` instead
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `exit_status`
   --> monarch-gui/src/commands/package.rs:486:9
    |
486 | ...et exit_status = ...
    |       ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_exit_status`

warning: value assigned to `missing_key` is never read
   --> monarch-gui/src/commands/package.rs:475:25
    |
475 | ...   missing_key = ...
    |       ^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0063, E0277.
For more information about an error, try `rustc --explain E0063`.
warning: `monarch-store` (lib) generated 5 warnings
error: could not compile `monarch-store` (lib) due to 7 previous errors; 5 warnings emitted
